--- a/environment.yml
+++ b/environment.yml
@@ -25,4 +25,5 @@ dependencies:
   - requests
   - pip:
       - beautifulsoup4
+      -python-dotenv
 prefix: /opt/homebrew/Caskroom/miniforge/base/envs/prog_design_proj
